feat(doc/with-icons): added info to doc for components with icons #1841

--- a/apps/doc/src/app/components/breadcrumbs/breadcrumbs-example.component.html
+++ b/apps/doc/src/app/components/breadcrumbs/breadcrumbs-example.component.html
@@ -3,6 +3,16 @@
     Our breadcrumb component is a simple way to show the user their current location in the site hierarchy.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>prizm-breadcrumbs (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
     <prizm-doc-example id="basic" [content]="breadcrumbsBasicExample" heading="Base">
       <prizm-breadcrumbs-basic></prizm-breadcrumbs-basic>
     </prizm-doc-example>
