--- a/apps/doc/src/app/components/buttons/split-button/split-button.component.html
+++ b/apps/doc/src/app/components/buttons/split-button/split-button.component.html
@@ -4,6 +4,17 @@
     can be performed on a particular item.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>prizm-split-button (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
+
     <prizm-doc-example id="split" [content]="exampleSplit" heading="Split Button">
       <prizm-split-buttons-example></prizm-split-buttons-example>
     </prizm-doc-example>
