--- a/apps/doc/src/app/components/tree/tree.component.html
+++ b/apps/doc/src/app/components/tree/tree.component.html
@@ -3,6 +3,17 @@
     Our tree component is a simple, flexible, and accessible tree view.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>prizm-tree-button (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
+
     <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
       <prizm-tree-base-example></prizm-tree-base-example>
     </prizm-doc-example>
