--- a/apps/doc/src/app/components/accordion/accordion-example.component.html
+++ b/apps/doc/src/app/components/accordion/accordion-example.component.html
@@ -3,6 +3,16 @@
     Our accordion component for displaying content in a collapsible and expandable format.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>prizm-accordion-item (PrizmIconsRegistry)</li>
+      </ol>
+    </div>
     <prizm-doc-example id="base" [content]="exampleBasicAccordion" heading="Base">
       <prizm-accordion-basic-example></prizm-accordion-basic-example>
     </prizm-doc-example>
