--- a/apps/doc/src/app/components/buttons/button/button.component.html
+++ b/apps/doc/src/app/components/buttons/button/button.component.html
@@ -3,6 +3,17 @@
     Our button component is a simple button that can be used to trigger an action.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>[prizmButton]button (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
+
     <prizm-doc-example id="base" [content]="exampleIcons" heading="With Icons">
       <prizm-icons-buttons-example></prizm-icons-buttons-example>
     </prizm-doc-example>
