--- a/apps/doc/src/app/components/input/input-text/input.component.html
+++ b/apps/doc/src/app/components/input/input-text/input.component.html
@@ -1,5 +1,16 @@
 <prizm-doc-page header="Input" package="KIT">
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>input-icon-button (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
+
     <prizm-doc-example id="base" [content]="zyfraInputBasicExample" heading="Basic example">
       <prizm-input-basic-example class="exapmle"></prizm-input-basic-example>
     </prizm-doc-example>
