--- a/apps/doc/src/app/components/tabs/tabs-example.component.html
+++ b/apps/doc/src/app/components/tabs/tabs-example.component.html
@@ -3,6 +3,18 @@
     Our tabs component is a simple way to organize content on a page.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>prizm-tabs (PrizmIconsFullRegistry)</li>
+        <li>prizm-tab (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
+
     <prizm-doc-example id="base" [content]="tabsExampleBasic" heading="Base">
       <prizm-tabs-example-basic></prizm-tabs-example-basic>
     </prizm-doc-example>
