--- a/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
@@ -1,11 +1,13 @@
+<p>clasFeature in developer preview</p>
 <prizm-input-layout label="Введите дату">
   <prizm-input-layout-date [formControl]="control" [min]="min" [max]="max"></prizm-input-layout-date>
 </prizm-input-layout>
 
 <pre>
-  {{ control.value | date : 'short' }}
+  {{ control.value }}
   min: {{ min | date : 'short' }}
   max: {{ max | date : 'short' }}
 </pre>
 
-test
+<button (click)="setDate('UTC')" prizmButton>Set UTC</button>
+<button (click)="setDate('ISO')" prizmButton>Set ISO</button>
