feat(components/cron): fix circular deps #000

--- a/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
@@ -1,4 +1,4 @@
-<p>clasFeature in developer preview</p>
+<p>Feature in developer preview</p>
 <prizm-input-layout label="Введите дату">
   <prizm-input-layout-date [formControl]="control" [min]="min" [max]="max"></prizm-input-layout-date>
 </prizm-input-layout>
