--- a/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
@@ -4,6 +4,7 @@
 </prizm-input-layout>
 
 <pre>
+  {{ control.value | date : 'short' }}
   {{ control.value }}
   min: {{ min | date : 'short' }}
   max: {{ max | date : 'short' }}
