feat(charts): removed modules #000

--- a/apps/doc/src/app/charts/pie/pie.component.html
+++ b/apps/doc/src/app/charts/pie/pie.component.html
@@ -111,7 +111,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsPieModule</code>
+          <code>PrizmChartsPieComponent</code>
           into a module where you want to use our component
         </p>
 
