--- a/apps/doc/src/app/charts/radar/radar.component.html
+++ b/apps/doc/src/app/charts/radar/radar.component.html
@@ -100,7 +100,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsRadarModule</code>
+          <code>PrizmChartsRadarComponent</code>
           into a module where you want to use our component
         </p>
 
