feat(components): removed deprecations #000

--- a/apps/doc/src/app/components/spinner/spinner.component.html
+++ b/apps/doc/src/app/components/spinner/spinner.component.html
@@ -61,7 +61,7 @@
       <li>
         <p>
           Import
-          <code>PrizmLoaderModule</code>
+          <code>PrizmLoaderComponent</code>
           into a module where you want to use our component
         </p>
 
