--- a/apps/doc/src/app/components/paginator/paginator-example.component.html
+++ b/apps/doc/src/app/components/paginator/paginator-example.component.html
@@ -184,7 +184,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmPaginatorModule</code>
+          Импортируйте <code>PrizmPaginatorComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
