--- a/apps/doc/src/app/components/panel/panel-example.component.html
+++ b/apps/doc/src/app/components/panel/panel-example.component.html
@@ -127,7 +127,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmPanelModule</code>
+          Импортируйте <code>PrizmPanelComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
