--- a/apps/doc/src/app/components/radio/radio-button-example.component.html
+++ b/apps/doc/src/app/components/radio/radio-button-example.component.html
@@ -123,7 +123,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmRadioButtonModule</code>
+          Импортируйте <code>PrizmRadioButtonComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
