feat(components): removed deprecations #000

--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -310,7 +310,7 @@
       <li>
         <p>
           Import
-          <code>PrizmDialogModule</code>
+          <code>PrizmDialogComponent</code>
           into a module where you want to use our component
         </p>
 
