--- a/apps/doc/src/app/components/hint/hint-example.component.html
+++ b/apps/doc/src/app/components/hint/hint-example.component.html
@@ -152,7 +152,7 @@
       <li>
         <p>
           Import
-          <code>PrizmHintModule</code>
+          <code>PrizmHintDirective</code>
           into a module where you want to use our component
         </p>
 
