--- a/apps/doc/src/app/components/card/card.component.html
+++ b/apps/doc/src/app/components/card/card.component.html
@@ -32,7 +32,7 @@
       <li>
         <p>
           Import
-          <code>PrizmCardModule</code>
+          <code>PrizmCardComponent</code>
           into a module where you want to use our component
         </p>
 
