feat(components): removed deprecations #000

--- a/apps/doc/src/app/components/dialogs/sidebar/sidebar.component.html
+++ b/apps/doc/src/app/components/dialogs/sidebar/sidebar.component.html
@@ -239,7 +239,7 @@
       <li>
         <p>
           Import
-          <code>PrizmSidebarModule</code>
+          <code>PrizmSidebarComponent</code>
           into a module where you want to use our component
         </p>
 
