--- a/apps/doc/src/app/components/error-page/error-page.component.html
+++ b/apps/doc/src/app/components/error-page/error-page.component.html
@@ -48,7 +48,7 @@
       <li>
         <p>
           Import
-          <code>PrizmErrorPageModule</code>
+          <code>PrizmErrorPageComponent</code>
           into a module where you want to use our component
         </p>
 
