--- a/apps/doc/src/app/components/file-upload/file-upload-example.component.html
+++ b/apps/doc/src/app/components/file-upload/file-upload-example.component.html
@@ -167,7 +167,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmFileUploadModule</code>
+          Импортируйте <code>PrizmFileUploadComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
