--- a/apps/doc/src/app/components/listing-item/listing-item-example.component.html
+++ b/apps/doc/src/app/components/listing-item/listing-item-example.component.html
@@ -90,7 +90,7 @@
       <li>
         <p>
           Import
-          <code>PrizmCardComponent</code>
+          <code>PrizmListingItemComponent</code>
           into a module where you want to use our component
         </p>
 
