fix(components/all): fixed for review #000

--- a/apps/doc/src/app/tools/overlay/overlay.component.html
+++ b/apps/doc/src/app/tools/overlay/overlay.component.html
@@ -35,7 +35,7 @@
       <li>
         <p>
           Import
-          <code>PrizmOverlayModule</code>
+          <code>PrizmOverlayComponent</code>
           into a module where you want to use our component
         </p>
 
