--- a/apps/doc/src/app/components/toggle/toggle-example.component.html
+++ b/apps/doc/src/app/components/toggle/toggle-example.component.html
@@ -191,7 +191,7 @@
       <li>
         <p>
           Import
-          <code>PrizmToggleModule</code>
+          <code>PrizmToggleComponent</code>
           into a module where you want to use our component
         </p>
 
