--- a/apps/doc/src/app/tools/polymorph/polymorph.component.html
+++ b/apps/doc/src/app/tools/polymorph/polymorph.component.html
@@ -43,7 +43,7 @@
       <li>
         <p>
           Import
-          <code>PrizmOverlayModule</code>
+          <code>PrizmOverlayComponent</code>
           into a module where you want to use our component
         </p>
 
