fix(components/chips): fiz spelling error in css variable name for height #000

--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -26,7 +26,7 @@
             [hintCanShow]="hintCanShow"
             [prizmDocHostElement]="chipsItem"
             [selected]="selected"
-            [style.--prizm-chips-item-heigh]="prizmChipsItemHeight"
+            [style.--prizm-chips-item-height]="prizmChipsItemHeight"
             [style.--prizm-chips-item-background]="prizmChipsItemBackground"
             [style.--prizm-chips-item-color]="prizmChipsItemColor"
             style="width: 100px"
@@ -65,7 +65,7 @@
     <prizm-doc-documentation heading="PrizmChipsItemComponent" hostComponentKey="PrizmChipsItemComponent">
       <ng-template
         [(documentationPropertyValue)]="prizmChipsItemHeight"
-        documentationPropertyName="prizm-chips-item-heigh"
+        documentationPropertyName="prizm-chips-item-height"
         documentationPropertyType="string"
         documentationPropertyMode="css-var"
       >
