fix(charts/all): fixed for review #000

--- a/apps/doc/src/app/charts/bar/bar.component.html
+++ b/apps/doc/src/app/charts/bar/bar.component.html
@@ -132,7 +132,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsBarModule</code>
+          <code>PrizmChartsBarComponent</code>
           into a module where you want to use our component
         </p>
 
