--- a/apps/doc/src/app/charts/gauge/gauge.component.html
+++ b/apps/doc/src/app/charts/gauge/gauge.component.html
@@ -72,7 +72,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsGaugeModule</code>
+          <code>PrizmChartsGaugeComponent</code>
           into a module where you want to use our component
         </p>
 
