--- a/apps/doc/src/app/charts/column/column.component.html
+++ b/apps/doc/src/app/charts/column/column.component.html
@@ -205,7 +205,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsLineModule</code>
+          <code>PrizmChartsLineComponent</code>
           into a module where you want to use our component
         </p>
 
