--- a/apps/doc/src/app/charts/line/line.component.html
+++ b/apps/doc/src/app/charts/line/line.component.html
@@ -111,7 +111,7 @@
       <li>
         <p>
           Import
-          <code>PrizmChartsLineModule</code>
+          <code>PrizmChartsLineComponent</code>
           into a module where you want to use our component
         </p>
 
