--- a/apps/doc/src/app/components/counter/counter-example.component.html
+++ b/apps/doc/src/app/components/counter/counter-example.component.html
@@ -78,7 +78,7 @@
       <li>
         <p>
           Import
-          <code>PrizmCardComponent</code>
+          <code>PrizmCounterComponent</code>
           into a module where you want to use our component
         </p>
 
