fix(components/all): fixed for review #000

--- a/apps/doc/src/app/components/buttons/tree-button/tree-button.component.html
+++ b/apps/doc/src/app/components/buttons/tree-button/tree-button.component.html
@@ -118,7 +118,7 @@
       <li>
         <p>
           Import
-          <code>PrizmButtonModule</code>
+          <code>PrizmButtonComponent</code>
           into a module where you want to use our component
         </p>
 
