--- a/apps/doc/src/app/tools/zone-event/zone-event.component.html
+++ b/apps/doc/src/app/tools/zone-event/zone-event.component.html
@@ -15,7 +15,7 @@
       <li>
         <p>
           Import
-          <code>PrizmZoneEventModule</code>
+          <code>PrizmZoneEventDirective</code>
           into a service where you want to use our directive
         </p>
 
