--- a/apps/doc/src/app/components/buttons/icon-button/icon-button.component.html
+++ b/apps/doc/src/app/components/buttons/icon-button/icon-button.component.html
@@ -182,7 +182,7 @@
       <li>
         <p>
           Import
-          <code>PrizmButtonModule</code>
+          <code>PrizmButtonComponent</code>
           into a module where you want to use our component
         </p>
 
