--- a/apps/doc/src/app/components/buttons/split-button/split-button.component.html
+++ b/apps/doc/src/app/components/buttons/split-button/split-button.component.html
@@ -121,7 +121,7 @@
       <li>
         <p>
           Import
-          <code>PrizmButtonModule</code>
+          <code>PrizmButtonComponent</code>
           into a module where you want to use our component
         </p>
 
