--- a/apps/doc/src/app/tools/to-observable/to-observable.component.html
+++ b/apps/doc/src/app/tools/to-observable/to-observable.component.html
@@ -13,7 +13,7 @@
       <li>
         <p>
           Import
-          <code>PrizmToObservableModule</code>
+          <code>PrizmToObservablePipe</code>
           into a module where you want to use our pipe
         </p>
 
