fix(components/paginator): add margin left for rows shown left direction #1154

--- a/libs/components/src/lib/components/paginator/paginator.component.less
+++ b/libs/components/src/lib/components/paginator/paginator.component.less
@@ -104,6 +104,10 @@
       .rows-selector {
         margin-right: 0;
       }
+
+      .rows__show {
+        margin-left: 16px;
+      }
     }
   }
 }
