fix(doc/paginator): example direction fix #1154

--- a/apps/doc/src/app/components/paginator/examples/paginator-basic-left-example/paginator-basic-left-example.component.html
+++ b/apps/doc/src/app/components/paginator/examples/paginator-basic-left-example/paginator-basic-left-example.component.html
@@ -5,5 +5,5 @@
   [rows]="10"
   [rowsCountOptions]="[5, 10, 20, 30]"
   [paginatorOptions]="{ noRowsSelectorLabel: true }"
-  [direction]="'right'"
+  [direction]="'left'"
 ></prizm-paginator>
