fix(components): fixed imports error after merge #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -110,13 +110,6 @@
       >
         Selected Switcher Idx Change
       </ng-template>
-      <!-- <ng-template
-        documentationPropertyName="switcherSelection"
-        documentationPropertyType="number"
-        documentationPropertyMode="output"
-      >
-        Selected switcher event emitter
-      </ng-template> -->
     </prizm-doc-documentation>
   </ng-template>
 
@@ -124,7 +117,7 @@
     <ol class="b-demo-steps">
       <li>
         <p>
-          Импортируйте <code>PrizmSwitcherModule</code>
+          Импортируйте <code>PrizmSwitcherComponent</code>
           в модуль в котором хотите использовать компоненту
         </p>
 
