--- a/apps/doc/src/app/components/input/input-multi-select/examples/with-transformer/multi-select-with-transformer-example.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/examples/with-transformer/multi-select-with-transformer-example.component.html
@@ -8,6 +8,7 @@
     [identityMatcher]="identityMatcher"
     [stringify]="stringify"
     [searchable]="true"
+    [selectAllItem]="selectAll"
   >
   </prizm-input-multi-select>
 </prizm-input-layout>
