feat(components/icon): added new icons #000

--- a/apps/doc/src/app/components/icons/base/icons.component.html
+++ b/apps/doc/src/app/components/icons/base/icons.component.html
@@ -110,4 +110,8 @@
   <ng-template prizmDocPageTab="Old Icons">
     <prizm-old-icon-example></prizm-old-icon-example>
   </ng-template>
+
+  <ng-template prizmDocPageTab="Old Svg Icons">
+    <prizm-old-icon-example></prizm-old-icon-example>
+  </ng-template>
 </prizm-doc-page>
