--- a/apps/doc/src/app/components/navigation-menu/navigation-menu-example.component.html
+++ b/apps/doc/src/app/components/navigation-menu/navigation-menu-example.component.html
@@ -5,6 +5,7 @@
   </div>
 
   <ng-template prizmDocPageTab>
+    <div>This component use prizm-icons-full.</div>
     <prizm-doc-example id="base" [content]="exampleBasicNavigationMenu" heading="Basic">
       <prizm-navigation-menu-basic-example></prizm-navigation-menu-basic-example>
     </prizm-doc-example>
