--- a/apps/doc/src/app/components/widget/examples/with-templates/widget-with-templates-example.component.html
+++ b/apps/doc/src/app/components/widget/examples/with-templates/widget-with-templates-example.component.html
@@ -16,11 +16,11 @@
   ></button>
 
   <ng-template #iconTemplate>
-    <prizm-icons-svg
+    <prizm-icons
       [size]="16"
-      [name]="idx === 0 ? PrizmIconSvgEnum.SETTINGS_TOOLS_BAN : PrizmIconSvgEnum.DATE_TIME_CALENDAR_PLUS"
+      [name]="idx === 0 ? PrizmIconSvgEnum.GEAR_8_EDGE : PrizmIconSvgEnum.CALENDAR_PLUS"
     >
-    </prizm-icons-svg>
+    </prizm-icons>
   </ng-template>
 </ng-template>
 
@@ -34,6 +34,6 @@
   ></button>
 
   <ng-template #iconTemplate>
-    <prizm-icons-svg [size]="16" [name]="PrizmIconSvgEnum.SETTINGS_TOOLS_BAN"> </prizm-icons-svg>
+    <prizm-icons [size]="16" [name]="PrizmIconSvgEnum.GEAR_8_EDGE"> </prizm-icons>
   </ng-template>
 </ng-template>
