--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
@@ -12,11 +12,16 @@
   (click)="interaction.emit(item)"
   (prizmHoveredChange)="isHovered = $event"
 >
-  <prizm-icons-svg
+  <!--  <prizm-icons-svg-->
+  <!--    class="prizm-navigation-menu-item__icon"-->
+  <!--    *ngIf="item.icon"-->
+  <!--    [name]="item.icon"-->
+  <!--  ></prizm-icons-svg>-->
+  <prizm-icons-full
     class="prizm-navigation-menu-item__icon"
     *ngIf="item.icon"
     [name]="item.icon"
-  ></prizm-icons-svg>
+  ></prizm-icons-full>
   <p class="prizm-navigation-menu-item__text" #elem>
     {{ item.text }}
   </p>
