feat(doc/nxmv): added page for nxmv #000

--- a/libs/doc/base/src/lib/components/example/example.component.less
+++ b/libs/doc/base/src/lib/components/example/example.component.less
@@ -6,6 +6,10 @@
   padding-top: 3.5rem;
   clear: right;
 
+  &.empty-heading {
+    padding-top: 0.75rem;
+  }
+
   :host-context(tui-root._mobile) {
     padding-top: 2rem;
   }
