--- a/libs/theme/src/styles/styles.less
+++ b/libs/theme/src/styles/styles.less
@@ -1,7 +1,2 @@
-@import 'font.less';
-@import 'typography/typography.less';
-@import 'theme/index.less';
-
-* {
-  box-sizing: border-box;
-}
+@import 'styles_';
+@import 'fonts/location';
