fix(components/listing-item): disabled items should not fire mouse events #1947

--- a/libs/components/src/lib/components/listing-item/listing-item.component.less
+++ b/libs/components/src/lib/components/listing-item/listing-item.component.less
@@ -1,5 +1,10 @@
 :host {
   background-color: var(--prizm-background-fill-overlay);
+
+  &.disabled {
+    pointer-events: none;
+  }
+
   .item-container {
     display: flex;
     align-items: center;
