fix(components/textarea): clear btn shouldnt be shown when disabled #000

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-textarea.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-textarea.component.less
@@ -7,8 +7,8 @@
     width: auto;
   }
 
-  &:hover,
-  &:focus-within {
+  &:not(.disabled):hover,
+  &:not(.disabled):focus-within {
     .label-container-textarea.label-container-outer {
       .prizm-input-label-clear-btn {
         display: block;
