fix(components/chips): disabled chips should not be interactive #000

--- a/libs/components/src/lib/components/chips/chips.component.less
+++ b/libs/components/src/lib/components/chips/chips.component.less
@@ -2,6 +2,10 @@
   display: inline-flex;
   width: 100%;
 
+  :host-context(.disabled) {
+    pointer-events: none;
+  }
+
   &.single-line:not(:empty) {
     margin-bottom: 8px;
   }
