fix(components/navigation-menu): fix item height #1964

--- a/apps/doc/src/app/components/tree/tree.component.html
+++ b/apps/doc/src/app/components/tree/tree.component.html
@@ -76,7 +76,7 @@
                 >Red Delicious</prizm-tree-item
               >
             </prizm-tree-item>
-            <prizm-tree-item [style.--prizm-tree-item-height]="treeItemHeight">Oranges</prizm-tree-item>
+            <prizm-tree-item [style.--prizm-tree-item-height]="treeItemHeight">>Oranges</prizm-tree-item>
           </prizm-tree-item>
           <prizm-tree-item [style.--prizm-tree-item-height]="treeItemHeight">
             Animals
