--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu/prizm-navigation-menu.component.less
@@ -1,7 +1,7 @@
 .prizm-navigation-menu {
   --prizm-navigation-menu__item-padding: 8px 16px;
   --prizm-navigation-menu__item-height: 40px;
-  --prizm-tree-item-height: var(--prizm-navigation-menu__item-height);
+  --prizm-tree-item-height: 40px;
 
   display: grid;
   grid-template-rows: min-content;
