fix(components/navigation-menu): fix item height #1964

--- a/libs/components/src/lib/components/tree/components/tree-item-content/tree-item-content.component.less
+++ b/libs/components/src/lib/components/tree/components/tree-item-content/tree-item-content.component.less
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   &:not(:empty) {
-    height: 32px;
+    height: var(--prizm-tree-item-height, 32px);
   }
 
   :host-context(prizm-tree-item._expandable):not(._expandable) {
