fix(components/input-layout-date): min max should correction for manual input #000

--- a/apps/doc/src/app/components/input/input-layout-date/examples/base/input-layout-date-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/base/input-layout-date-base-example.component.html
@@ -1,3 +1,9 @@
 <prizm-input-layout label="Заголовок">
-  <prizm-input-layout-date [formControl]="control"></prizm-input-layout-date>
+  <prizm-input-layout-date [formControl]="control" [min]="min" [max]="max"></prizm-input-layout-date>
 </prizm-input-layout>
+
+<pre>
+  min: {{ min.toLocalNativeDate() | date : 'shortDate' }}
+  max: {{ max.toLocalNativeDate() | date : 'shortDate' }}
+  value: {{ control.value }}
+</pre>
