--- a/libs/components/src/lib/components/input/input-date/input-layout-date.component.html
+++ b/libs/components/src/lib/components/input/input-date/input-layout-date.component.html
@@ -11,6 +11,7 @@
   <input
     class="input-search"
     #focusableElementRef
+    #mask="mask"
     [mask]="computedMask"
     [showMaskTyped]="focusableElementRef.focused"
     [dropSpecialCharacters]="false"
