feat(components/input-layout-date): invalid string as value should set null #000

--- a/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/date-provider/input-date-provider-example.component.html
@@ -12,3 +12,4 @@
 
 <button (click)="setDate('UTC')" prizmButton>Set UTC</button>
 <button (click)="setDate('ISO')" prizmButton>Set ISO</button>
+<button (click)="setInvalidDate()" prizmButton>Set invalid string</button>
