fix(components/table): table sort cursor correction #1986

--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -71,7 +71,6 @@
       display: flex;
       gap: 2px;
       color: var(--prizm-button-secondary-solid-default);
-      cursor: pointer;
       align-items: center;
       justify-content: center;
 
@@ -83,6 +82,7 @@
     &__number {
       min-width: 16px;
       text-align: end;
+      cursor: default;
     }
   }
 }
