--- a/libs/components/src/lib/components/table/th/th.style.less
+++ b/libs/components/src/lib/components/table/th/th.style.less
@@ -83,6 +83,10 @@
       min-width: 16px;
       text-align: end;
       cursor: default;
+
+      &.hidden {
+        display: none;
+      }
     }
   }
 }
