feat(components/checkbox): add box shadow for disabled radio and checkbox #2024

--- a/libs/components/src/lib/components/radio/prizm-radio-button.component.less
+++ b/libs/components/src/lib/components/radio/prizm-radio-button.component.less
@@ -109,6 +109,7 @@ prizm-radio-button {
       & + .radio-button {
         border-color: var(--prizm-form-fill-disable);
         background-color: var(--prizm-form-fill-disable);
+        box-shadow: 0 0 0 1px var(--prizm-background-fill-primary);
       }
 
       &:checked + .radio-button {
