--- a/libs/components/src/lib/components/checkbox/checkbox.component.less
+++ b/libs/components/src/lib/components/checkbox/checkbox.component.less
@@ -104,6 +104,7 @@
   .checkbox {
     border-color: var(--prizm-form-fill-disable);
     background-color: var(--prizm-form-fill-disable);
+    box-shadow: 0 0 0 1px var(--prizm-background-fill-primary);
     &--checked,
     &--indeterminate {
       background-color: var(--prizm-form-active-disable);
