feat(components/input-select): fix search input for dropdown #1981

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.less
@@ -79,7 +79,7 @@
 }
 
 .list-search-item {
-  padding: var(--prizm-select-item-padding, 8px 16px);
+  padding: var(--prizm-select-item-padding, 16px 16px 8px);
 
   prizm-input-layout {
     width: 100%;
