--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.less
@@ -92,7 +92,7 @@ prizm-icon {
 }
 
 .list-search-item {
-  padding: var(--prizm-select-item-padding, 8px 16px);
+  padding: var(--prizm-select-item-padding, 16px 16px 8px);
 
   prizm-input-layout {
     width: 100%;
