--- a/libs/components/src/lib/components/chips/chips.component.html
+++ b/libs/components/src/lib/components/chips/chips.component.html
@@ -1,6 +1,14 @@
 <ng-container *prizmLet="chipsList$ | async as chipsList">
-  <div class="chips-list" *ngIf="!!chipsList?.length" [class.hidden]="singleLine" prizmOverflowHost>
+  <div
+    class="chips-list"
+    #overflowHost="prizmOverflowHost"
+    *ngIf="!!chipsList?.length"
+    [active]="singleLine"
+    [class.hidden]="singleLine"
+    prizmOverflowHost
+  >
     <prizm-chips-item
+      #overflowItem="prizmOverflowItem"
       *ngFor="let item of chipsList; let i = index; trackBy: trackByIdx"
       [hintCanShow]="hintCanShow"
       [hintDirection]="hintDirection"
@@ -8,6 +16,8 @@
       [hintText]="item"
       [deletable]="deletable"
       [disabled]="accessorIsDisabled"
+      [prizmContext]="item"
+      [prizmContextKey]="overflowItem"
       (deleted)="removeChips($event, i)"
       (click)="chipClick(item)"
       prizmOverflowItem
@@ -15,31 +25,15 @@
       {{ item }}
     </prizm-chips-item>
 
-    <ng-container *ngIf="overflowedChipsList$ | async as chipsOverflowedList">
+    <ng-container *ngIf="overflowHost.active">
       <div
         class="more-item"
-        *ngIf="chipsOverflowedList.size"
-        [prizmHint]="getOverflowedChipsListHint()"
+        *ngIf="(overflowHost.hiddenElements$ | async)?.length"
+        [prizmHint]="overflowHost.hiddenElements$ | prizmGetContextByKeys | async | prizmCallFunc : joinHints"
         [prizmHintDirection]="hintDirection"
       >
         ...
       </div>
     </ng-container>
-    <!--    </ng-container>-->
   </div>
 </ng-container>
-
-<!--<ng-template-->
-<!--  #buttonTemplate-->
-<!--  let-item="item"-->
-<!--  let-idx="idx"-->
-<!--  let-parent="parent"-->
-<!--  let-background="background"-->
-<!--  let-hint="hint"-->
-<!--  let-allChipsCount="allChipsCount"-->
-<!--  let-hideDelete="hideDelete"-->
-<!--  let-singleLine="singleLine"-->
-<!--  let-forceShowHint="forceShowHint"-->
-<!--&gt;-->
-<!--  -->
-<!--</ng-template>-->
