feat(components/switcher): added items #000

--- a/libs/components/src/lib/components/switcher/switcher.component.html
+++ b/libs/components/src/lib/components/switcher/switcher.component.html
@@ -1,16 +1,15 @@
 <div class="container">
   <ng-container #viewRef></ng-container>
-  <ng-container *ngFor="let switcher of switchers; let i = index">
-    <prizm-switcher-item
-      class="switcher-item"
-      *ngIf="!switcher.hide"
-      [data]="$any(switcher)"
-      [disabled]="!!ngControl?.disabled"
-      [isActive]="selectedSwitcherIdx === i"
-      [type]="type"
-      [fullWidth]="fullWidth"
-      [prizmSwitcherHint]="switcher.hint"
-      (click)="selectSwitcher(switcher, i)"
-    ></prizm-switcher-item>
-  </ng-container>
+  <!--  <ng-container *ngFor="let switcher of switchers; let i = index">-->
+  <!--    <prizm-switcher-item-->
+  <!--      class="switcher-item"-->
+  <!--      *ngIf="!switcher.hide"-->
+  <!--      [data]="$any(switcher)"-->
+  <!--      [isActive]="selectedSwitcherIdx === i"-->
+  <!--      [type]="type"-->
+  <!--      [fullWidth]="fullWidth"-->
+  <!--      [prizmSwitcherHint]="switcher.hint"-->
+  <!--      (click)="selectSwitcher(switcher, i)"-->
+  <!--    ></prizm-switcher-item>-->
+  <!--  </ng-container>-->
 </div>
