feat(components/switcher): finished key goals #000

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -3,6 +3,10 @@
     Our switcher component is a simple toggle that can be used to turn something on or off.
   </div>
   <ng-template prizmDocPageTab>
+    <prizm-doc-example id="projection" [content]="exampleProjectionSwitcher" heading="Projection">
+      <prizm-switcher-projection-example></prizm-switcher-projection-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="base" [content]="exampleBasicSwitcher" heading="Basic">
       <prizm-switcher-basic-example></prizm-switcher-basic-example>
     </prizm-doc-example>
