feat(components/switcher): finished key goals #000

--- a/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
+++ b/apps/doc/src/app/components/switcher/examples/switcher-projection-example/switcher-projection-example.component.html
@@ -2,6 +2,7 @@
   <prizm-switcher-item
     *ngFor="let item of switchers"
     [disabled]="!!item.disabled"
+    [appearance]="item.appearance ?? 'secondary'"
     [appearanceType]="item.appearanceType ?? 'ghost'"
   >
     {{ item.title }}
