--- a/libs/components/src/lib/components/switcher/switcher.component.html
+++ b/libs/components/src/lib/components/switcher/switcher.component.html
@@ -1,4 +1,4 @@
-<div class="container" #container [title]="selectedIndexDirective.selectedIndex">
+<div class="container" #container>
   <ng-container #viewRef></ng-container>
   <ng-content></ng-content>
 </div>
